# jax_ffi_cuda_mvp

./: .gitignore  README.md
external_function/: CMakeLists.txt  build.sh  cuda_example.cu  cuda_example.py  cuda_example_test.py  pyproject.toml
